--- a/assets/treeview.css
+++ b/assets/treeview.css
@@ -1,76 +1,23 @@
 /******************************************************************************
- * Variables from silverbullet theme 
- * 
- * Ideally these would be injected by showPanel. But for now they are just 
- * copied here. 
- *****************************************************************************/
-
-html {
-  --ui-accent-color: #464cfc;
-  --highlight-color: rgba(255, 255, 0, 0.5);
-  --link-color: #0330cb;
-  --link-missing-color: #9e4705;
-  --subtle-color: #676767;
-  --subtle-background-color: rgba(72, 72, 72, 0.1);
-
-  --root-background-color: #fff;
-  --root-color: inherit;
-
-  --top-color: inherit;
-  --top-background-color: #e1e1e1;
-  --top-border-color: #cacaca;
-
-  --action-button-background-color: transparent;
-  --action-button-color: #292929;
-  --action-button-hover-color: #0772be;
-  --action-button-active-color: #0772be;
-  
-  --editor-list-bullet-color: rgb(150, 150, 150);
-  --editor-command-button-color: inherit;
-  --editor-wiki-link-page-background-color: rgba(77, 141, 255, 0.07);
-  --editor-wiki-link-page-color: var(--link-color);
-  --editor-wiki-link-page-missing-color: var(--link-missing-color);
-  --editor-wiki-link-color: #8f96c2;
-  --editor-widget-background-color: rgb(238, 238, 238);
-  
-  --ui-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --editor-font: "iA-Mono", "Menlo";
-}
-
-html[data-theme="dark"] {
-  --ui-accent-color: #464cfc;
-  --highlight-color: rgba(255, 255, 0, 0.5);
-  --link-color: #7e99fc;
-  --link-missing-color: #9e4705;
-  --subtle-color: #959595;
-  --subtle-background-color: rgba(105, 105, 105, 0.1);
-
-  --root-background-color: #111;
-  --root-color: #fff;
-
-  --top-color: #fff;
-  --top-background-color: #262626;
-  --top-border-color: rgb(62, 62, 62);
-
-  --action-button-background-color: transparent;
-  --action-button-color: #adadad;
-  --action-button-hover-color: #37a1ed;
-  --action-button-active-color: #37a1ed;
-
-  --editor-list-bullet-color: rgb(150, 150, 150);
-  --editor-command-button-color: #fff;
-  --editor-wiki-link-page-background-color: #a3bce712;
-  --editor-wiki-link-page-color: var(--link-color);
-  --editor-wiki-link-page-missing-color: var(--link-missing-color);
-  --editor-wiki-link-color: #8f96c2;
-  --editor-widget-background-color: rgba(72, 72, 72, 0.5);
-}
-
-/******************************************************************************
  * Page variables
  *****************************************************************************/
+
+ html {
+  --treeview-node-border-width: 2px;
+  --treeview-node-border-radius: 5px;
+
+  --treeview-page-color: var(--editor-wiki-link-page-color);
+  --treeview-page-background-color: var(--editor-wiki-link-page-background-color);
+  --treeview-page-border-color: var(--treeview-page-background-color);
+
+  --treeview-folder-color: var(--editor-wiki-link-page-missing-color);
+  --treeview-folder-background-color: var(--treeview-page-background-color);
+  --treeview-folder-border-color: var(--treeview-page-background-color);
+
+  --treeview-current-page-color: #eee;
+	--treeview-current-page-background-color: var(--ui-accent-color);
+  --treeview-current-page-border-color: var(--treeview-page-border-color);
+}
 
 .treeview-root {
   /* SortableTree variables */
@@ -79,16 +26,6 @@ html[data-theme="dark"] {
   --st-collapse-icon-height: 2.1rem;
   --st-collapse-icon-width: 1.25rem;
   --st-collapse-icon-size: 1rem;
-
-  /** treeview ariables */
-  --page-color: var(--editor-wiki-link-page-color);
-  --page-background-color: var(--editor-wiki-link-page-background-color);
-  --folder-color: var(--editor-wiki-link-page-missing-color);
-
-  --node-border-width: 2px;
-  --node-border-radius: 5px;
-	--current-page-color: #eee;
-	--current-page-background-color: var(--ui-accent-color);
 }
 
 /******************************************************************************
@@ -99,6 +36,7 @@ html, body {
   background-color: var(--root-background-color);
   padding: 0;
   margin: 0;
+  overflow: initial !important;
 }
 
 .treeview-root {
@@ -113,7 +51,7 @@ html, body {
  * Action styles are meant to mimic the Top Bar icons (`sb-actions`)
  *****************************************************************************/
 
- .treeview-header {
+.treeview-header {
   position: sticky;
   top: 0;
   z-index: 2;
@@ -123,7 +61,6 @@ html, body {
 
 .treeview-actions {
   display: flex;
-  padding-left: var(--st-subnodes-padding-left);
   background-color: var(--editor-widget-background-color);
   border: var(--top-border-color) 1px solid;
   border-radius: 5px;
@@ -175,12 +112,12 @@ html, body {
 }
 
 .tree__label:after {
-  content: '';
+  content: ' ';
   position: absolute;
   z-index: 4;
-  inset: calc(var(--node-border-width) * -1) var(--node-border-width);
-  border-top: calc(var(--node-border-width) * 2) solid transparent;
-  border-bottom: calc(var(--node-border-width) * 2) solid transparent;
+  inset: calc(var(--treeview-node-border-width) * -1) var(--treeview-node-border-width);
+  border-top: calc(var(--treeview-node-border-width) * 2) solid transparent;
+  border-bottom: calc(var(--treeview-node-border-width) * 2) solid transparent;
   transition: border-color 0.2s;
   pointer-events: none;
 }
@@ -196,10 +133,10 @@ html, body {
 .tree__label > span {
   overflow: hidden;
   padding: 0 5px;
-  background-color: var(--page-background-color);
-  border: var(--page-background-color) var(--node-border-width) solid;
-  border-radius: var(--node-border-radius);
-  color: var(--page-color);
+  border-color: transparent;
+  border-width: var(--treeview-node-border-width);
+  border-style: solid;
+  border-radius: var(--treeview-node-border-radius);
   cursor: pointer;
   font-family: var(--editor-font);
   font-size: 18px;
@@ -210,16 +147,22 @@ html, body {
 }
 
 .tree__label > span[data-node-type="page"] {
-  border-color: var(--page-background-color);
+  background-color: var(--treeview-page-background-color);
+  border-color: var(--treeview-page-border-color);
+  color: var(--treeview-page-color);
 }
 
 .tree__label > span[data-node-type="folder"] {
-  color: var(--folder-color);
+  background-color: var(--treeview-folder-background-color);
+  border-color: var(--treeview-folder-border-color);
+  color: var(--treeview-folder-color);
 }
 
+
 .tree__label > span[data-current-page="true"] {
-	background-color: var(--current-page-background-color);
-	color: var(--current-page-color);
+	background-color: var(--treeview-current-page-background-color);
+  border-color: var(--treeview-current-page-border-color);
+	color: var(--treeview-current-page-color);
 }
 
 .tree__collapse {
@@ -227,9 +170,9 @@ html, body {
 }
 
 .tree__node--dragging {
-  margin: calc(var(--node-border-width) * -1);
-  border: var(--node-border-width) dashed var(--subtle-color);
-  border-radius: var(--node-border-radius);
+  margin: calc(var(--treeview-node-border-width) * -1);
+  border: var(--treeview-node-border-width) dashed var(--subtle-color);
+  border-radius: var(--treeview-node-border-radius);
   cursor: move !important;
 }
 
@@ -244,5 +187,5 @@ html, body {
 }
 
 .tree__node--drop-inside > .tree__label > span[data-current-page="true"] {
-	color: var(--page-color);
+	color: var(--treeview-page-color);
 }
